# DiningPhilosophersProblem

./: .gitignore  CMakeLists.txt  README.md
DiningPhilosophersProblem/: CMakeLists.txt  DiningPhilosophers  Fork.cpp  Fork.h  Philosopher.cpp  Philosopher.h  Waiter.cpp  Waiter.h  main.cpp  makefile
